# poe-cli

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
poe/: __main__.py  app.py  constants.py  exceptions.py  formatters.py  output.py  paths.py  safety.py  types.py
poe/commands/: root.py
poe/commands/dev/: commands.py
poe/commands/ninja/: commands.py
poe/commands/ninja/atlas/: __init__.py  commands.py
poe/commands/ninja/builds/: __init__.py  commands.py
poe/commands/ninja/meta/: __init__.py  commands.py
poe/commands/ninja/price/: __init__.py  commands.py
poe/commands/sim/: commands.py
poe/data/repoe/: base_items.json  bench_crafts.json  essences.json  fossils.json  mod_pool.json  mods.json  stat_translations.json
poe/models/: sim.py
poe/models/ninja/: analysis.py  builds.py  discovery.py  economy.py  history.py  protobuf.py
poe/services/ninja/: atlas.py  builds.py  cache.py  client.py  comparison.py  constants.py  costing.py  discovery.py  economy.py  errors.py  history.py  patches.py  protobuf.py  workflows.py
poe/services/repoe/: constants.py  data.py  sim.py  sim_service.py
poe/services/repoe/pipeline/: pipeline.py
poe/skills/poe/: SKILL.md  build.md  craft.md  mechanics.md  ninja.md
skills/: pob.md
src/pob/: cli.py  craftdata.py  craftsim.py  engine.py  models.py  parser.py  paths.py  stubs.py  writer.py
tests/: conftest.py  test_app.py  test_cli.py  test_cli_crud.py  test_constants.py  test_craftdata.py  test_craftsim.py  test_exceptions.py  test_formatters.py  test_models.py  test_output.py  test_parser.py  test_paths.py  test_safety.py  test_types.py  test_validate.py  test_writer.py
tests/commands/: test_commands.py
tests/commands/dev/: test_commands.py
tests/commands/ninja/: test_commands.py  test_history.py  test_patches.py  test_search.py
tests/commands/ninja/atlas/: test_commands.py
tests/commands/ninja/builds/: test_commands.py
tests/commands/ninja/price/: test_commands.py
tests/commands/sim/: test_commands.py
tests/fixtures/: empty.xml  endgame_full.xml  leaguestart_single.xml  leveling_minimal.xml  minimal_valid.xml  multi_set.xml
tests/integration/: conftest.py  test_build_features.py  test_coe_live.py  test_cross_validate.py  test_edge_cases.py  test_fragile_paths.py  test_item_features.py  test_ninja_live.py  test_ninja_schema_drift.py  test_parse_builds.py  test_roundtrip.py  test_skill_features.py
tests/llm_scenarios/: 01_whats_my_build.yaml  02_show_my_gear.yaml  03_gem_links.yaml  04_why_am_i_dying.yaml  05_flask_immunity.yaml  06_compare_two_builds.yaml  07_build_config_audit.yaml  08_passive_tree_check.yaml  09_jewel_sockets.yaml  10_share_build.yaml  11_divine_orb_price.yaml  12_meta_overview.yaml  13_find_cheap_build.yaml  14_copy_top_build.yaml  15_atlas_strategy.yaml  16_unique_prices.yaml  17_currency_convert.yaml  18_scarab_prices.yaml  19_poe2_meta.yaml  20_league_info.yaml  21_craft_helmet.yaml  22_fossil_crafting.yaml  23_bench_crafts.yaml  24_essence_crafting.yaml  25_simulate_chaos_spam.yaml  26_bad_target_mod.yaml  27_flask_base_crafting.yaml  28_jewel_crafting.yaml  29_compare_craft_methods.yaml  30_crafting_prices.yaml  31_improve_cheap_build.yaml  32_craft_upgrade_for_build.yaml  33_ninja_to_local_analysis.yaml  34_heatmap_analysis.yaml  35_league_start_plan.yaml  36_encode_decode_roundtrip.yaml  37_create_and_equip.yaml  38_price_history_trend.yaml  39_rf_build_inspection.yaml  40_minion_build_gems.yaml  (+11 more)
tests/models/ninja/: test_discovery.py
tests/services/ninja/: conftest.py  test_atlas.py  test_audit_fixes.py  test_builds.py  test_cache.py  test_client.py  test_comparison.py  test_costing.py  test_discovery.py  test_economy.py  test_errors.py  test_protobuf.py  test_workflows.py
tests/services/repoe/: test_data.py  test_sim.py  test_sim_service.py
tests/services/repoe/pipeline/: test_pipeline.py
