[project]
name = "poe-tools"
version = "0.1.0"
description = "Interact with all your favorite PoE tools through the command line"
requires-python = ">=3.12"
dependencies = [
    "lupa>=2.6.0",
    "cyclopts>=4.10",
    "defusedxml>=0.7",
    "httpx>=0.28.1",
    "pydantic>=2.12",
]

[project.optional-dependencies]
test = ["pytest>=9.0.2", "pytest-cov>=7.0.0", "respx>=0.22"]

[dependency-groups]
dev = [
    "ruff>=0.15.6",
    "ty>=0.0.1a7",
    "types-lupa>=2.0",
    "types-defusedxml>=0.7",
    "pytest>=9.0.2",
    "pytest-cov>=6.0",
    "respx>=0.22",
    "coverage-threshold>=0.6.2",
]

[project.scripts]
poe = "poe.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["poe"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = [".", "tests"]
exclude = ["vendor"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",    # type annotations — we use ty for that
    "TD",     # TODO formatting pedantry
    "FIX",    # fixme comments pedantry
    "INP001", # implicit namespace packages
    "S",      # bandit — too noisy, we use defusedxml already
    "PT",     # pytest style — overly prescriptive
    "EM",     # string literals in exceptions — too strict for CLIs
    "TRY003", # long exception messages — same
    "COM812", # trailing comma — conflicts with formatter
    "ISC001", # implicit string concat — conflicts with formatter
    "D100",   # module docstrings — we ban these, not require them
    "D101",   # class docstrings — class names should be self-documenting
    "D102",   # public method docstrings — function names should be self-documenting
    "D103",   # public function docstrings — same
    "D104",   # package docstrings — __init__.py doesn't need them
    "D105",   # magic method docstrings — self-evident
    "D107",   # __init__ docstrings — not needed
    "D203",   # blank line before class docstring — conflicts with D211
    "D213",   # multi-line summary second line — conflicts with D212
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-first-party = ["poe"]

[tool.ruff.lint.pylint]
max-args = 20
max-branches = 15
max-statements = 60

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"poe/app.py" = ["T20"]
"poe/output.py" = ["T20"]
"poe/models/build/*.py" = [
    "TC001", # pydantic needs runtime access to referenced model types
]
"poe/models/sim.py" = [
    "TC001", # pydantic needs runtime access to referenced model types
]
"poe/models/ninja/*.py" = [
    "TC001", # pydantic needs runtime access to referenced model types
]
"tests/**" = [
    "T20",     # print() ok in tests
    "D",       # no docstring requirements in tests
    "PLR2004", # magic values ok in tests
    "SLF001",  # private member access ok in tests
    "ERA001",  # commented-out code ok in tests
    "PLC0415", # imports in functions ok in tests
    "N806",    # uppercase variables ok in tests
    "FBT",     # boolean values in test assertions/constructors ok
    "ARG002",  # fixture side-effects make args look unused
    "ARG005",  # unused lambda args in mock objects
    "SIM117",  # nested with statements clearer for patch+raises
    "RUF059",  # unpacked vars used for structure in tests
    "BLE001",  # broad except in CLI test helper to capture all errors
]

[tool.pytest.ini_options]
markers = ["integration: tests that require real PoB builds or network access"]
norecursedirs = [".git", ".tox", "node_modules", "dist", ".venv"]

[tool.coverage.run]
source = ["poe"]
omit = ["poe/__main__.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage-threshold]
file_line_coverage_min = 90
line_coverage_min = 90

# High-value layers — aim for near-complete coverage
[tool.coverage-threshold.modules."poe/services/build/*"]
file_line_coverage_min = 95

[tool.coverage-threshold.modules."poe/services/build/xml/*"]
file_line_coverage_min = 95

[tool.coverage-threshold.modules."poe/models/build/*"]
file_line_coverage_min = 95

# Lower bar for hard-to-test layers
[tool.coverage-threshold.modules."poe/services/build/engine/*"]
file_line_coverage_min = 80

[tool.coverage-threshold.modules."poe/services/repoe/pipeline/*"]
file_line_coverage_min = 80

[tool.coverage-threshold.modules."poe/services/ninja/*"]
file_line_coverage_min = 90

[tool.coverage-threshold.modules."poe/models/ninja/*"]
file_line_coverage_min = 90
